--- a/.scribe/endpoints/03.yaml
+++ b/.scribe/endpoints/03.yaml
@@ -237,7 +237,7 @@ endpoints:
     custom: []
   -
     httpMethods:
-      - PUT
+      - POST
     uri: 'api/products/{id}'
     metadata:
       groupName: 'Products Management'
