--- a/.scribe/endpoints.cache/03.yaml
+++ b/.scribe/endpoints.cache/03.yaml
@@ -239,7 +239,7 @@ endpoints:
     custom: []
   -
     httpMethods:
-      - PUT
+      - POST
     uri: 'api/products/{id}'
     metadata:
       groupName: 'Products Management'
