add scribe and finsh sitting scribe

--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -6,7 +6,7 @@ endpoints:
   -
     httpMethods:
       - POST
-    uri: api/register_by_email
+    uri: api/register
     metadata:
       groupName: 'Authenticating Management'
       groupDescription: |-
