--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -8,7 +8,7 @@ endpoints:
   -
     httpMethods:
       - POST
-    uri: api/register_by_email
+    uri: api/register
     metadata:
       groupName: 'Authenticating Management'
       groupDescription: |-
